--- a/style.css
+++ b/style.css
@@ -63,6 +63,25 @@ main h2 {
   margin-bottom: 1em;
 }
 
+/* Project section (Research Page) */
+.project {
+  margin-bottom: 40px;
+  padding: 15px 20px;
+  background-color: #f7faff;
+  border: 1px solid #d0e6f7;
+  border-radius: 10px;
+}
+
+.project h2 {
+  color: #007acc;
+  margin-top: 0;
+}
+
+.project ul {
+  padding-left: 20px;
+  list-style-type: disc;
+}
+
 /* Footer */
 footer {
   text-align: center;
